# Materials-Bank

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yaml  release.yaml
materials/: __init__.py
materials/cs/backend/iac/provisioners/terraform/projects/web_server/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
materials/cs/backend/iac/provisioners/terraform/projects/web_server/modules/asg/: main.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/web_server/modules/elb/: main.tf  outputs.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/web_server/modules/network/: main.tf  outputs.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/web_server/modules/security/: main.tf  outputs.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/webserver/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
materials/cs/backend/iac/provisioners/terraform/projects/webserver/modules/asg/: main.tf  outputs.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/webserver/modules/lb/: main.tf  outputs.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/webserver/modules/security/: main.tf  outputs.tf  variables.tf
materials/cs/backend/iac/provisioners/terraform/projects/webserver/scripts/: user_data.sh
materials/cs/backend/languages/go/tour_of_go/: equivalent_binary_tree.go  errors.go  fibonacci.go  go.mod  images.go  maps.go  reader.go  rot_reader.go  slices.go  web_crawler.go
materials/cs/mle/mlops/efficient_dl/02_management_and_testing/: requirements.txt
materials/cs/mle/mlops/efficient_dl/02_management_and_testing/seminar/: .gitignore  requirements.txt  test_basic.py
materials/cs/mle/mlops/efficient_dl/02_management_and_testing/seminar/src/: compute_metrics.py  hparams.py  prepare_data.py  train.py
materials/cs/mle/mlops/efficient_dl/03_fast_pipelines/seminar/: image_loaders_benchmark.py  mnist_training.py  practice.ipynb
materials/mle/mlops/efficient_dl/01_intro/: seminar.ipynb
