[tool.poetry]
name = "materials"
version = "0.2.0"
description = "Materials bank to store relevant information"
authors = ["Gleb Khaykin <khaykingleb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
commitizen = "^2.42.0"
detect-secrets = "^1.4.0"
black = "^23.1.0"
flake8 = "^6.0.0"

[tool.poetry.group.research.dependencies]
ipykernel = "^6.21.3"
ipywidgets = "^8.0.4"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
src_paths = ["materials"]
profile = "black"
line_length = 100
multi_line_output = 3
order_by_type = true
reverse_relative = true
from_first = false

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version",
]
branch = "master"
upload_to_pypi = false
upload_to_release = false
commit_subject = "chore(release): v{version} [skip ci]"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
